--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,50 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/css/et-line.css">
+  <link rel="stylesheet" href="assets/css/ionicons.min.css">
+
+  <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+  <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+
+  <link rel="stylesheet" href="assets/css/animate.min.css">
+
+  <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
+<div class="loader">
+    <div class="loader-outter"></div>
+    <div class="loader-inner"></div>
+</div>
   <app-root></app-root>
+
+<script src="assets/js/jquery.min.js"></script>
+
+<script src="assets/js/popper.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/waypoints.min.js"></script>
+
+<script src="assets/js/owl.carousel.min.js"></script>
+
+<script src="assets/js/parallax.min.js"></script>
+
+<script src="assets/js/jquery.counterup.min.js"></script>
+
+<script src="assets/js/jquery.countdown.min.js"></script>
+
+<script src="assets/js/wow.min.js"></script>
+
+<script src="assets/js/main.js"></script>
+<script async src="../../../../www.googletagmanager.com/gtag/jsa055.html?id=UA-23581568-13"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-23581568-13');
+</script>
 </body>
 </html>
